<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivityLayout"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/headerGenerateCodes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/purple_500"
        android:gravity="center"
        android:orientation="vertical">
        <include layout="@layout/activity_header"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/body"
        android:layout_above="@+id/footerGenerateCodes"
        android:layout_below="@id/headerGenerateCodes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="-150sp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/errorMessageMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalid_password_error_msg"
            android:textSize="18sp"
            android:textColor="@color/error"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--TextInput layout which acts as a wrapper to the edit text-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/admin_pass_input_text"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordText"
                android:layout_width="281dp"
                android:layout_height="match_parent"
                android:ems="15"
                android:inputType="textPassword"
                android:textSize="20dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/adminLoginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button_text"
            android:layout_margin="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/footerGenerateCodes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/purple_500"
        android:orientation="vertical">
        <include layout="@layout/activity_footer"/>
    </LinearLayout>

</RelativeLayout>